# Amni-Ai

./: .gitignore  LICENSE  MOBILE.md  NOTICE  README.md  adam.bat  adam.sh  changelog.md  gf17_translator.py  install.bat  install.py  install.sh  installer.bat  installer.py  installer.sh  pyproject.toml  requirements.txt  upgrade.bat  upgrade.py  upgrade.sh
LICENSES/: apache-2.0.txt
amni/: __init__.py  adam.py  bootstrap.py  cli.py  runtime.py
amni_kernels/: .gitignore  Cargo.toml  __init__.py  amni_kernels.cp313-win_amd64.pyd  pyproject.toml
amni_kernels/src/: angel.rs  gf17_recurrent.rs  hilbert.rs  lib.rs  nonce.rs  prime_roots.rs  resonance.rs  sept_diffusion.rs  sept_unet.rs  septidecimal.rs  tex_io.rs  tmu_inference.rs  tokenizer.rs
data/: devdocs_canonical_50.json  devdocs_canonical_extended.json  devdocs_v5_5_96_extension.json  hard_kb_bench_v5_5_83.json  hard_kb_extended_17_v5_5_101.json  hard_kb_julia_v5_5_98.json  hard_kb_nim_v5_5_98.json  hard_kb_recovery_v5_5_102.json  language_registry.json
docs/: AGENT_SURFACE.md  BENCHMARKS.md  INSTALL.md  ROADMAP.md  SECURITY.md  SOFTWARE_ENGINEER.md  TUTORIAL.md  adam_autonomy_hardening.md  bf16_substrate_gap_v5_0_4.md  fp16_kernel_zero_output_2026_05_26.md  incredible_adam_roadmap.md  loop_coding_knowledge_progress.md  loop_security_progress.md
examples/: quickstart.py
scripts/: adam1_bake.py  adam_cli.py  adam_iteration_ledger.py  amni_ask.py  amni_chat.py  amni_serve.py  atex_dogfood.py  autonomous_coder.py  autonomous_debug_demo.py  bake_granite_atex.py  bake_watch_server.py  bench_code_selfcorrect.py  bench_learning_lift.py  bench_modern.py  bench_parent.py  bench_suites.py  bench_vs_codex.py  check_publish_health.py  claude_to_adam_memory.py  download_voices.py  eval_humaneval.py  gen_distill_targets.py  gen_pwa_icons.py  granite_bake_launch.py  installer_server.py  measure_tokps.py  mine_code_prompts.py  pack_code_corpus.py  pack_code_lessons.py  regression_gate.py  seed_block_bank.py  seed_canonical_facts.py  smoke_test.py  test_ptex_roundtrip.py  tok_per_sec_probe.py  trace_pass.py  trace_quantize_analysis.py  tunnel.py  v5_0_3_bake.py  v5_5_21_ptex_to_gf17.py
tests/: _crawler_debug.py  _critique_exec_probe.py  _critique_probe.py  _smoke_triton_v5_0_3c.py  _v6_1_live_scan.py  _v6_1_live_scan_v2.py  _v6_2_cleanup_and_final.py  _v6_2_reprobe.py  _v6_3_live_persona_probe.py  _v6_3_obscure_persona_probe.py  _v6_4_live_smoke.py  _v6_5_live_smoke.py  _v6_6_coding_probe.py  (+44 more)
(+378 files in other folders)
