[build-system]
requires = ["setuptools>=68.0","wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "amni-ai"
version = "6.4.2"
description = "Adam — GF(17) texture-native AI with persistent learning, agentic skills, and federated knowledge sharing."
readme = "README.md"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE","NOTICE","LICENSES/*"]
requires-python = ">=3.10"
authors = [{name="Amnibro",email="99765883+Amnibro@users.noreply.github.com"}]
keywords = ["ai","llm","ptex","gf17","texture-native","federated-learning","mcp","adam"]
classifiers = ["Programming Language :: Python :: 3","Operating System :: OS Independent","Topic :: Scientific/Engineering :: Artificial Intelligence"]
dependencies = ["numpy>=1.24.0","Pillow>=10.0.0","transformers>=4.30.0","torch>=2.0.0","accelerate>=0.20.0","scipy>=1.10.0","pydantic>=2.0.0","requests>=2.28.0","huggingface_hub>=0.23.0","safetensors>=0.4.0","fastapi>=0.110.0","uvicorn>=0.27.0"]
[project.optional-dependencies]
serve = ["fastapi>=0.110.0","uvicorn>=0.27.0"]
crawl = ["ddgs>=0.9.0","trafilatura>=1.6.0"]
federated = ["amni-prism>=0.1.0"]
all = ["fastapi>=0.110.0","uvicorn>=0.27.0","ddgs>=0.9.0","trafilatura>=1.6.0","amni-prism>=0.1.0","aiofiles>=23.0.0","sentence-transformers>=2.2.0"]
[project.scripts]
amni = "amni.cli:main"
[project.urls]
Homepage = "https://github.com/Amnibro/Amni-Ai"
Documentation = "https://github.com/Amnibro/Amni-Ai/blob/main/README.md"
Issues = "https://github.com/Amnibro/Amni-Ai/issues"
[tool.setuptools.packages.find]
include = ["amni*"]
exclude = ["tests*","docs*","backups*","experiences*","data*","models*","downloaded_models*","bakes*","logs*","ptex_hf*","hf_cache*","textures*","checkpoints*","eval_reports*","full_lexicon_atlas*","learnings*","archive*","examples*","environment_files*","node_modules*"]
