[package]
name = "amni_kernels"
version = "0.6.0"
edition = "2021"
[lib]
name = "amni_kernels"
crate-type = ["cdylib"]
[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.10"
ahash = "0.8"
memmap2 = "0.9"
byteorder = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
debug = 0
incremental = false

